examples/errors/parsing/fun-empty-branch-body.cn
fun f : Int -> Int [pure] = { n -> }

main : () [impure] = ()
